--- a/task-a/index.html
+++ b/task-a/index.html
@@ -1,3 +1,9 @@
+html 
+<!--
+Author: Mona Määttänen
+Date: 2025-09-18
+-->
+
 <!DOCTYPE html>
 
 <html>
@@ -13,7 +19,8 @@
 
         <p>Tätä on mielenkiintoista tehdä!</p>
 
-        <a href="https://www.w3.org/People/Raggett/book4/ch02.html"> target="_blank">Tämä on linkki</a>
+        <a href="https://www.w3.org/People/Raggett/book4/ch02.html" target="_blank">Tämä on linkki</a>
+
 
     </body>
     
