--- a/task-b/index.html
+++ b/task-b/index.html
@@ -1,1 +1,13 @@
 html
+<!--
+Athor: Mona Määttänen
+Date: 2025-09-23
+ -->
+
+ <!DOCTYPE html>
+
+ <html lang="fi">
+    <head>
+        <tilte>Toinen sivu</tilte>
+    </head>
+ </html>
