--- a/task-a/index.html
+++ b/task-a/index.html
@@ -10,7 +10,7 @@ Date: 2025-09-18
     <head>
 
         <title>Ensimmäinen sivu</title>
-        <link rel="stylesheet" href="task-a/style.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
