--- a/task-b/index.html
+++ b/task-b/index.html
@@ -1,6 +1,6 @@
 html
 <!--
-Athor: Mona Määttänen
+Author: Mona Määttänen
 Date: 2025-09-23
  -->
 
@@ -8,6 +8,37 @@ Date: 2025-09-23
 
  <html lang="fi">
     <head>
-        <tilte>Toinen sivu</tilte>
+
+        <title>Toinen sivu</title>
+        <link rel="stylesheet" href="style.css">
+
     </head>
+    <body>
+        
+
+        <h1>Mona Määttänen</h1>
+
+        <p>Hei! Olen Mona ja olen 22 vuotias. Tämä web kurssi on 
+            mielenkiintoinen ja tätä on kiva oppia. Olen oppinut nyt jo
+            paljon, mutta odotan sitä että opin lisää. Sitten kun tämä 
+            kurssi loppuu aion vapaa-ajallakin opetella lisää.
+        </p>
+
+        <ul> 
+            <li>Lentopallo</li>
+            <li>Virkkaus</li>
+            <li>Säätäminen</li>
+        </ul>
+
+        <a href="https://www.instagram.com/monsku03/?hl=fi" target="_blank">Monan instagram</a>
+
+        <h2>Minun tavoitteeni kurssille</h2>
+
+        <ol>
+            <li>Muistaa komentoja ulkoa</li>
+            <li>Oppia mahdollisimman paljon</li>
+            <li>Päästä kurssista läpi</li>
+        </ol>
+
+    </body>
  </html>
