--- a/task-a/index.html
+++ b/task-a/index.html
@@ -1,28 +1,21 @@
-html 
-<!--
-Author: Mona Määttänen
-Date: 2025-09-18
--->
-
 <!DOCTYPE html>
-
 <html lang="fi">
-    <head>
+<head>
+    <meta charset="UTF-8">
+    <title>Ensimmäinen sivu</title>
+    <link rel="stylesheet" href="style.css">
+    <!--
+      Author: Mona Määttänen
+      Date: 2025-09-18
+    -->
+</head>
+<body>
 
-        <title>Ensimmäinen sivu</title>
-        <link rel="stylesheet" href="style.css">
+    <h1>Hello Web</h1>
 
-    </head>
-    <body>
+    <p>Tätä on mielenkiintoista tehdä!</p>
 
-        <h1>Tervetuloa</h1>
+    <a href="https://www.w3.org/People/Raggett/book4/ch02.html" target="_blank">Tämä on linkki</a>
 
-        <p>Tätä on mielenkiintoista tehdä!</p>
-
-        <a href="https://www.w3.org/People/Raggett/book4/ch02.html" target="_blank">Tämä on linkki</a>
-
-
-    </body>
-    
-
+</body>
 </html>
