--- a/task-b/index.html
+++ b/task-b/index.html
@@ -1,16 +1,14 @@
-html
-<!--
-Author: Mona Määttänen
-Date: 2025-09-23
- -->
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 
  <html lang="fi">
     <head>
-
+        <meta charset="UTF-8">
         <title>Toinen sivu</title>
         <link rel="stylesheet" href="style.css">
+        <!--
+        Author: Mona Määttänen
+        Date: 2025-09-23
+        -->
 
     </head>
     <body>
