--- a/task-c/index.html
+++ b/task-c/index.html
@@ -1,5 +1,40 @@
-html
-<!--
-Author: Mona Määttänen
-Date: 2025-09-24
- -->
+<!DOCTYPE html>
+<html lang="fi">
+<head>
+  <meta charset="UTF-8">
+  <title>My Multimedia Showcase</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <h1>My Multimedia Showcase</h1>
+
+  <!-- Kuva -->
+  <img src="https://www.trupanion.com/images/trupanionwebsitelibraries/default-album/labrador-retriever-three.jpg?sfvrsn=6b8f9459_8"
+       alt="Labradorin noutaja">
+
+  <!-- Ääni -->
+  <audio controls preload="none">
+    <source src="https://upload.wikimedia.org/wikipedia/commons/transcoded/a/a2/Barking_of_a_dog.ogg/Barking_of_a_dog.ogg.mp3" type="audio/mpeg">
+    <source src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Barking_of_a_dog.ogg" type="audio/ogg">
+    Selaimesi ei tue audio-elementtiä. Lataa ääni: <a href="https://commons.wikimedia.org/wiki/File:Barking_of_a_dog.ogg" target="_blank" rel="noopener">Barking_of_a_dog.ogg</a>.
+  </audio>
+
+  <!-- Video -->
+  <iframe width="560" height="315"
+          src="https://www.youtube.com/embed/xuvW9dYJx18"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen>
+  </iframe>
+
+  <!-- Lähteet -->
+  <p>
+    Kuva: Trupanion<br>
+    Ääni: "Barking of a dog" — Amada44 (Wikimedia Commons), CC BY-SA 3.0. Lähde: <a href="https://commons.wikimedia.org/wiki/File:Barking_of_a_dog.ogg" target="_blank" rel="noopener">Wikimedia Commons</a>.:contentReference[oaicite:1]{index=1}<br>
+    Video: <a href="https://www.youtube.com/shorts/xuvW9dYJx18?feature=share" target="_blank" rel="noopener">YouTube</a>
+  </p>
+</body>
+</html>
+
