--- a/task-c/index.html
+++ b/task-c/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="fi">
+      <!--
+        Author: Mona Määttänen
+        Date: 2025-10-3
+        -->
 <head>
   <meta charset="UTF-8">
   <title>My Multimedia Showcase</title>
