--- a/task-e/index.html
+++ b/task-e/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Weekly Timetable</title>
-  <link rel="stylesheet" href="task-e/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!--
@@ -18,8 +18,8 @@
   <main class="content">
     <!-- Student info block: edit the values as needed -->
     <section class="student-info" aria-label="Student information">
-      <p><strong>Student:</strong> <span class="student-name">Your Name</span></p>
-      <p><strong>Group:</strong> <span class="student-group">Group A</span></p>
+      <p><strong>Student:</strong> <span class="student-name">Mona</span></p>
+      <p><strong>Group:</strong> <span class="student-group">NTIS24K</span></p>
     </section>
     <div class="table-wrap">
       <table class="table">
@@ -30,22 +30,57 @@
             <th>Tue</th>
             <th>Wed</th>
             <th>Thu</th>
+            <th>Fri</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Course name A</td>
+            <td>Sähkömagnetismi</td>
             <td>&#9989;</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
+          </tr>
+          <tr>
+            <td>Tiedonsiirron perusteet</td>
+            <td>&#9989;</td>
+            <td>&#9989;</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
+          </tr>
+          <tr>
+            <td>Svenska för arbetslivet, muntlig kommunikation</td>
+            <td>&#10060;</td>
+            <td>&#9989;</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
+          </tr>
+          <tr>
+            <td>Linux perusteet</td>
+            <td>&#10060;</td>
+            <td>&#9989;</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
+            <td>&#9989;</td>
+          </tr>
+          <tr>
+            <td>Ohjelmistotuotanto</td>
+            <td>&#10060;</td>
+            <td>&#10060;</td>
             <td>&#9989;</td>
             <td>&#10060;</td>
             <td>&#10060;</td>
           </tr>
           <tr>
-            <td>Course name B</td>
-            <td>&#9989;</td>
-            <td>&#9989;</td>
+            <td>WEB-kehittämisen persuteet</td>
             <td>&#10060;</td>
             <td>&#10060;</td>
+            <td>&#10060;</td>
+            <td>&#9989;</td>
+            <td>&#9989;</td>
           </tr>
         </tbody>
       </table>
