--- a/task-c/index.html
+++ b/task-c/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fi">
-      <!--
-        Author: Mona Määttänen
-        Date: 2025-10-3
-        -->
+<!--
+  Author: Mona Määttänen
+  Date: 2025-10-03
+-->
 <head>
   <meta charset="UTF-8">
   <title>My Multimedia Showcase</title>
@@ -21,24 +21,27 @@
   <audio controls preload="none">
     <source src="https://upload.wikimedia.org/wikipedia/commons/transcoded/a/a2/Barking_of_a_dog.ogg/Barking_of_a_dog.ogg.mp3" type="audio/mpeg">
     <source src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Barking_of_a_dog.ogg" type="audio/ogg">
-    Selaimesi ei tue audio-elementtiä. Lataa ääni: <a href="https://commons.wikimedia.org/wiki/File:Barking_of_a_dog.ogg" target="_blank" rel="noopener">Barking_of_a_dog.ogg</a>.
+    Selaimesi ei tue audio-elementtiä. Lataa ääni:
+    <a href="https://commons.wikimedia.org/wiki/File:Barking_of_a_dog.ogg" target="_blank" rel="noopener">
+      Barking_of_a_dog.ogg
+    </a>.
   </audio>
 
   <!-- Video -->
-  <iframe width="560" height="315"
-          src="https://www.youtube.com/embed/xuvW9dYJx18"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen>
-  </iframe>
+    <video controls width="560">
+  <source src="https://www.pexels.com/fi-fi/download/video/3042473/" type="video/mp4">
+  Selaimesi ei tue video-elementtiä.
+</video>
 
   <!-- Lähteet -->
   <p>
     Kuva: Trupanion<br>
-    Ääni: "Barking of a dog" — Amada44 (Wikimedia Commons), CC BY-SA 3.0. Lähde: <a href="https://commons.wikimedia.org/wiki/File:Barking_of_a_dog.ogg" target="_blank" rel="noopener">Wikimedia Commons</a>.:contentReference[oaicite:1]{index=1}<br>
-    Video: <a href="https://www.youtube.com/shorts/xuvW9dYJx18?feature=share" target="_blank" rel="noopener">YouTube</a>
+    Ääni: "Barking of a dog" — Amada44 (Wikimedia Commons), CC BY-SA 3.0.
+    Lähde:
+    <a href="https://commons.wikimedia.org/wiki/File:Barking_of_a_dog.ogg" target="_blank" rel="noopener">
+      Wikimedia Commons
+    </a><br>
+    Video: Oma ladattu koiravideo (Pixabay / vapaa käyttöoikeus)
   </p>
 </body>
 </html>
-
