--- a/task-h/index.html
+++ b/task-h/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>Registration Form</title>
-  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="index.js"></script>
 </head>
 <body>
   <!--
     Author: Mona Määttänen
-    Date: 2025-11-04
+    Date: 2025-11-12
   -->
   <header class="site-header">
     <h1>Registration Form</h1>
