--- a/task-g/index.html
+++ b/task-g/index.html
@@ -16,6 +16,11 @@
   </header>
 
   <main class="content">
+    <section class="student-info" aria-label="Student information">
+      <h2 class="student-info-title">Information</h2>
+      <p><span class="student-name">Your Name</span></p>
+      <p><span class="student-group">Group number</span></p>
+    </section>
     <section class="controls" aria-label="User Registration">
       <h2>Register</h2>
       <form id="registrationForm" novalidate>
@@ -41,6 +46,7 @@
 
         <div class="form-row">
           <label for="birthdate">Birth date:</label>
+          <th>Terms Accepted</th>
           <input type="date" id="birthdate" name="birthdate">
           <span class="error" id="birthError"></span>
         </div>
