--- a/task-g/index.html
+++ b/task-g/index.html
@@ -16,10 +16,11 @@
   </header>
 
   <main class="content">
+     <div class="top-grid">
     <section class="student-info" aria-label="Student information">
       <h2 class="student-info-title">Information</h2>
-      <p><span class="student-name">Your Name</span></p>
-      <p><span class="student-group">Group number</span></p>
+      <p><span class="student-name">Mona Määttänen</span></p>
+      <p><span class="student-group">NTIS24K</span></p>
     </section>
     <section class="controls" aria-label="User Registration">
       <h2>Register</h2>
